# lame

./: config.h.meson  meson.build  meson_options.txt  upstream.wrap
frontend/: meson.build
libmp3lame/: meson.build
